--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-agp = "8.4.1"
+agp = "8.5.2"
 #noinspection GradleDependency
 ksp = "1.9.24-1.0.20"
 #noinspection GradleDependency
 kotlin = "1.9.24"
-coreKtx = "1.13.1"
+coreKtx = "1.15.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.8.1"
-activityCompose = "1.9.0"
-composeBom = "2024.05.00"
-navigationCompose = "2.8.0-beta02"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.10.0"
+composeBom = "2025.01.00"
+navigationCompose = "2.8.5"
 kotlinxSerializationJson = "1.6.3"
 daggerHilt = "2.51.1"
 roomRuntime = "2.6.1"
